--- a/Barrow/ocean_barrow.in
+++ b/Barrow/ocean_barrow.in
@@ -247,8 +247,8 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
 ! Time-Stepping parameters.
 
-       NTIMES == 46080
-          DT == 60.0d0
+       NTIMES == 92160
+          DT == 24.0d0
      NDTFAST == 20
 
 ! Number of timesteps for computing observation impacts during the
@@ -276,24 +276,24 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
        NRREC == 0
    LcycleRST == T
-        NRST == 1440
-        NSTA == 60
-        NFLT == 60
+        NRST == 3600
+        NSTA == 150
+        NFLT == 150
        NINFO == 1
 
 ! Output history, average, diagnostic files parameters.
 
      LDEFOUT == T
-        NHIS == 180
-     NDEFHIS == 1440
-        NQCK == 60
-     NDEFQCK == 1440
+        NHIS == 450
+     NDEFHIS == 3600
+        NQCK == 150
+     NDEFQCK == 3600
       NTSAVG == 1
-        NAVG == 1440
-     NDEFAVG == 1440
+        NAVG == 3600
+     NDEFAVG == 3600
      NTSAVG2 == 1
-       NAVG2 == 60
-    NDEFAVG2 == 1440
+       NAVG2 == 150
+    NDEFAVG2 == 3600
       NTSDIA == 1
         NDIA == 10
      NDEFDIA == 0
@@ -601,14 +601,14 @@ SO_sdev(isTsur) == 1.0d0 1.0d0             ! NT surface tracers flux
 
 Hout(idUvel) == T       ! u                  3D U-velocity
 Hout(idVvel) == T       ! v                  3D V-velocity
-Hout(idu3dE) == F       ! u_eastward         3D U-eastward  at RHO-points
-Hout(idv3dN) == F       ! v_northward        3D V-northward at RHO-points
+Hout(idu3dE) == T       ! u_eastward         3D U-eastward  at RHO-points
+Hout(idv3dN) == T       ! v_northward        3D V-northward at RHO-points
 Hout(idWvel) == T       ! w                  3D W-velocity
 Hout(idOvel) == T       ! omega              omega vertical velocity
 Hout(idUbar) == T       ! ubar               2D U-velocity
 Hout(idVbar) == T       ! vbar               2D V-velocity
-Hout(idu2dE) == F       ! ubar_eastward      2D U-eastward  at RHO-points
-Hout(idv2dN) == F       ! vbar_northward     2D V-northward at RHO-points
+Hout(idu2dE) == T       ! ubar_eastward      2D U-eastward  at RHO-points
+Hout(idv2dN) == T       ! vbar_northward     2D V-northward at RHO-points
 Hout(idFsur) == T       ! zeta               free-surface
 Hout(idBath) == T       ! bath               time-dependent bathymetry
 
@@ -685,6 +685,12 @@ Hout(idHsbl) == T       ! Hsbl               depth of surface boundary layer
 Hout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
 Hout(idMtke) == F       ! tke                turbulent kinetic energy
 Hout(idMtls) == F       ! gls                turbulent length scale
+
+Hout(idStr) == T        ! strain             strain
+Hout(id3dPV) == T       ! pvor               potential vorticity
+Hout(id3dPVI) == T      ! pvorti             i component of potential vorticity
+Hout(id3dPVJ) == T      ! pvortj             j component of potential vorticity
+Hout(id3dPVK) == T      ! pvortk             k component of potential vorticity
 
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers into the HISTORY
@@ -791,6 +797,14 @@ Qout(idHsbl) == F       ! Hsbl               depth of surface boundary layer
 Qout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
 Qout(idMtke) == F       ! tke                turbulent kinetic energy
 Qout(idMtls) == F       ! gls                turbulent length scale
+
+Qout(idEBF)  == T       ! EBF                Ekman buoyancy flux
+Qout(idStr2) == T       ! strain_sur         surface strain
+Qout(idRVsu) == T       ! rvort_sur          surface relative vorticity
+Qout(idPVsu) == T       ! pvort_sur          surface potential vorticity
+Qout(idPVIsu) == T      ! pvorti_sur         surface potential vorticity, i component
+Qout(idPVJsu) == T      ! pvortj_sur         surface potential vorticity, j component
+Qout(idPVKsu) == T      ! pvortk_sur         surface potential vorticity, k component
 
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers into the QUICKSAVE
@@ -903,10 +917,10 @@ Aout(idSdif) == F       ! AKs                vertical Salinity diffusion
 Aout(idHsbl) == T       ! Hsbl               depth of surface boundary layer
 Aout(idHbbl) == F       ! Hbbl               depth of bottom boundary layer
 
-Aout(id2dRV) == F       ! pvorticity_bar     2D relative vorticity
-Aout(id3dRV) == F       ! pvorticity         3D relative vorticity
-Aout(id2dPV) == F       ! rvorticity_bar     2D potential vorticity
-Aout(id3dPV) == F       ! rvorticity         3D potential vorticity
+Aout(id2dRV) == T       ! pvorticity_bar     2D relative vorticity
+Aout(id3dRV) == T       ! pvorticity         3D relative vorticity
+Aout(id2dPV) == T       ! rvorticity_bar     2D potential vorticity
+Aout(id3dPV) == T       ! rvorticity         3D potential vorticity
 
 Aout(idu3dD) == F       ! u_detided          detided 3D U-velocity
 Aout(idv3dD) == F       ! v_detided          detided 3D V-velocity
@@ -1038,7 +1052,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! except the last one.
 
    NCLMFILES == 1                         ! number of climate files
-     CLMNAME == /center1/AKWATERS/kshedstrom/Barrow/Files/Barrow_CLM_2018.nc |
+     CLMNAME == /center1/AKWATERS/kshedstrom/Barrow/Files/Barrow_CLM_2018.nc
 
     NBCFILES == 2                          ! number of boundary files
      BRYNAME == /center1/AKWATERS/kshedstrom/Barrow/Files/Barrow_sea_bdry_2018.nc \
@@ -1051,7 +1065,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! Input Sources/Sinks forcing (like river runoff) file name.
 
      NSSFFILES == 1
-     SSFNAME == /center1/AKWATERS/kshedstrom/Barrow/Files/Barrow_rivers_2018.nc
+     SSFNAME == /center1/AKWATERS/kshedstrom/Barrow/Files/JRA-1.4_Barrow_rivers_2018.nc
 
 ! Input tidal forcing file name.
 
@@ -1075,13 +1089,13 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! continuation (\) or a vertical bar (|) symbol after each entry, except
 ! the last one.
 
-    NFFILES == 9                          ! number of forcing files
+    NFFILES == 10                         ! number of forcing files
 
     FRCNAME == /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Pair_2018.nc  \
                /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Qair_2018.nc  \
                /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Tair_2018.nc  \
                /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_rain_2018.nc  \
-               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_rain_2018.nc  \
+               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_snow_2018.nc  \
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_swrad_2018.nc  \
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Uwind_2018.nc  \
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Vwind_2018.nc  \
@@ -1425,8 +1439,6 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 !  LBC(isHice) Ice thickness,     [1:4, Ngrids] values are expected.
 !  LBC(isHsno) Snow thickness,    [1:4, Ngrids] values are expected.
 !  LBC(isTice) Ice temperature,   [1:4, Ngrids] values are expected.
-!  LBC(isApond)Surface water,     [1:4, Ngrids] values are expected.
-!  LBC(isHpond)Surface water,     [1:4, Ngrids] values are expected.
 !  LBC(isSig11)Sigma-11,          [1:4, Ngrids] values are expected.
 !  LBC(isSig12)Sigma-12,          [1:4, Ngrids] values are expected.
 !  LBC(isSig22)Sigma-22,          [1:4, Ngrids] values are expected.
