--- a/Palau/ocean_palau_1_2.in
+++ b/Palau/ocean_palau_1_2.in
@@ -210,10 +210,6 @@ ad_Vadvection == C4       \                     ! temperature
                   Clo     Clo     Clo     Clo         ! snow thickness
    LBC(isTice) == Clo     Clo     Clo     Clo  \
                   Clo     Clo     Clo     Clo         ! ice temperature
-  LBC(isApond) == Clo     Clo     Clo     Clo  \
-                 Clo     Clo     Clo     Clo         ! surface water
-  LBC(isHpond) == Clo     Clo     Clo     Clo  \
-                 Clo     Clo     Clo     Clo         ! surface water
   LBC(isSig11) == Clo     Clo     Clo     Clo  \
                  Clo     Clo     Clo     Clo         ! sigma-11
   LBC(isSig12) == Clo     Clo     Clo     Clo  \
@@ -690,6 +686,12 @@ Hout(idHbbl) == F F       ! Hbbl               depth of bottom boundary layer
 Hout(idMtke) == F F       ! tke                turbulent kinetic energy
 Hout(idMtls) == F F       ! gls                turbulent length scale
 
+Hout(idStr) == T        ! strain             strain
+Hout(id3dPV) == T       ! pvor               potential vorticity
+Hout(id3dPVI) == T      ! pvorti             i component of potential vorticity
+Hout(id3dPVJ) == T      ! pvortj             j component of potential vorticity
+Hout(id3dPVK) == T      ! pvortk             k component of potential vorticity
+
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers. An inert passive tracer
 ! is one that it is only advected and diffused. Other processes are ignored.
@@ -769,6 +771,14 @@ Aout2(idSrad) == T T                          ! shortwave radiation flux
 Aout2(idEmPf) == F F                          ! E-P flux
 Aout2(idevap) == F F                          ! evaporation rate
 Aout2(idrain) == F F                          ! precipitation rate
+
+Qout(idEBF)  == T       ! EBF                Ekman buoyancy flux
+Qout(idStr2) == T       ! strain_sur         surface strain
+Qout(idRVsu) == T       ! rvort_sur          surface relative vorticity
+Qout(idPVsu) == T       ! pvort_sur          surface potential vorticity
+Qout(idPVIsu) == T      ! pvorti_sur         surface potential vorticity, i component
+Qout(idPVJsu) == T      ! pvortj_sur         surface potential vorticity, j component
+Qout(idPVKsu) == T      ! pvortk_sur         surface potential vorticity, k component
 
 ! Logical switches (TRUE/FALSE) to activate writing of extra inert passive
 ! tracers other than biological and sediment tracers. An inert passive tracer
@@ -1403,8 +1413,6 @@ Dout(iTvdif) == T T T T     ! temp_vdiff, ...    vertical diffusion
 !  LBC(isHice) Ice thickness,     [1:4, Ngrids] values are expected.
 !  LBC(isHsno) Snow thickness,    [1:4, Ngrids] values are expected.
 !  LBC(isTice) Ice temperature,   [1:4, Ngrids] values are expected.
-!  LBC(isApond)Surface water,     [1:4, Ngrids] values are expected.
-!  LBC(isHpond)Surface water,     [1:4, Ngrids] values are expected.
 !  LBC(isSig11)Sigma-11,          [1:4, Ngrids] values are expected.
 !  LBC(isSig12)Sigma-12,          [1:4, Ngrids] values are expected.
 !  LBC(isSig22)Sigma-22,          [1:4, Ngrids] values are expected.
