--- a/Arctic/ocean_arctic4.in
+++ b/Arctic/ocean_arctic4.in
@@ -98,7 +98,7 @@ GridsInLayer =  1
         Nbed =  0             ! Number of sediment bed layers
 
          NAT =  2             ! Number of active tracers (usually, 2)
-         NPT =  6             ! Number of inactive passive tracers
+         NPT =  0             ! Number of inactive passive tracers
          NCS =  0             ! Number of cohesive (mud) sediment tracers
          NNS =  0             ! Number of non-cohesive (sand) sediment tracers
 
@@ -197,13 +197,13 @@ ad_Vadvection == C4       \                     ! temperature
    LBC(isMtke) ==   Clo     Clo     Clo     Clo         ! mixing TKE
 
    LBC(isTvar) ==   RadNud  RadNud  RadNud  RadNud \    ! temperature
-                    RadNud  RadNud  RadNud  RadNud \    ! salinity
-                    Clo     Clo     Clo     Clo    \    ! inert(1)
-                    Clo     Clo     Clo     Clo    \    ! inert(2)
-                    Clo     Clo     Clo     Clo    \    ! inert(3)
-                    Clo     Clo     Clo     Clo    \    ! inert(4)
-                    Clo     Clo     Clo     Clo    \    ! inert(5)
-                    Clo     Clo     Clo     Clo         ! inert(6)
+                    RadNud  RadNud  RadNud  RadNud      ! salinity
+!                   Clo     Clo     Clo     Clo    \    ! inert(1)
+!                   Clo     Clo     Clo     Clo    \    ! inert(2)
+!                   Clo     Clo     Clo     Clo    \    ! inert(3)
+!                   Clo     Clo     Clo     Clo    \    ! inert(4)
+!                   Clo     Clo     Clo     Clo    \    ! inert(5)
+!                   Clo     Clo     Clo     Clo         ! inert(6)
 
 ! Ice boundary conditions
 
@@ -250,8 +250,8 @@ ad_VolCons(north) ==  F                            ! northern boundary
 !      NTIMES == 216000
        NTIMES == 1080
 !      NTIMES == 388800
-          DT == 80.0d0
-!         DT == 60.0d0
+!         DT == 80.0d0
+          DT == 60.0d0
      NDTFAST == 20
 
 ! Number of timesteps for computing observation impacts during the
@@ -279,12 +279,12 @@ ad_VolCons(north) ==  F                            ! northern boundary
 
        NRREC == 0
    LcycleRST == T
-        NRST == 5400
-        NSTA == 45
-        NFLT == 45
-!       NRST == 7200
-!       NSTA == 60
-!       NFLT == 60
+!       NRST == 5400
+!       NSTA == 45
+!       NFLT == 45
+        NRST == 7200
+        NSTA == 60
+        NFLT == 60
        NINFO == 1
 
 ! Output history, average, diagnostic files parameters.
@@ -296,21 +296,23 @@ ad_VolCons(north) ==  F                            ! northern boundary
 !    NDEFHIS == 36
 !       NHIS == 45
 !    NDEFHIS == 45
+        NQCK == 0
+     NDEFQCK == 0
       NTSAVG == 1
-        NAVG == 1080
-     NDEFAVG == 1080
-!       NAVG == 1440
-!    NDEFAVG == 1440
+!       NAVG == 1080
+!    NDEFAVG == 1080
+        NAVG == 1440
+     NDEFAVG == 1440
      NTSAVG2 == 1
-       NAVG2 == 135
-    NDEFAVG2 == 1080
-!      NAVG2 == 180
-!   NDEFAVG2 == 1440
+!      NAVG2 == 135
+!   NDEFAVG2 == 1080
+       NAVG2 == 180
+    NDEFAVG2 == 1440
       NTSDIA == 1
-        NDIA == 1080
-     NDEFDIA == 1080
-!       NDIA == 1440
-!    NDEFDIA == 1440
+!       NDIA == 1080
+!    NDEFDIA == 1080
+        NDIA == 1440
+     NDEFDIA == 1440
 
 ! Output tangent linear and adjoint models parameters.
 
@@ -362,8 +364,7 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! Vertical mixing coefficients for tracers in nonlinear model and
 ! basic state scale factor in adjoint-based algorithms: [1:NAT+NPT,Ngrids]
 
-!    AKT_BAK == 2*1.0d-6                        ! m2/s
-     AKT_BAK == 8*1.0d-6                        ! m2/s
+     AKT_BAK == 2*1.0d-6                        ! m2/s
 
   ad_AKT_fac == 1.0d0  1.0d0                    ! nondimensional
 
@@ -472,8 +473,8 @@ LtracerSponge == F F                            ! temperature, salinity, inert
 ! origin for tidal forcing, and model reference time for output
 ! NetCDF units attribute.
 
-      DSTART =  29226.5d0                  ! days (1980)
-!     DSTART =  40907.0d0                  ! days (2012)
+!     DSTART =  29226.5d0                  ! days (1980)
+      DSTART =  42003.5d0                  ! days (2015)
   TIDE_START =  -1.0d0                     ! days
     TIME_REF =  19000101.0d0               ! yyyymmdd.dd
 
@@ -543,7 +544,7 @@ LtracerSponge == F F                            ! temperature, salinity, inert
  LnudgeM2CLM == T                          ! 2D momentum
  LnudgeM3CLM == T                          ! 3D momentum
 
-  LnudgeTCLM == T T F F F F F F            ! temperature, salinity, inert
+  LnudgeTCLM == T T                        ! temperature, salinity, inert
 
 ! Logical switches for ice climatology and nudging
 
@@ -679,6 +680,7 @@ Hout(idWorb) == F       ! Ub_swan            wave bottom orbital velocity
 Hout(idWdis) == F       ! Wave_dissip        wave dissipation
 
 Hout(idPair) == F       ! Pair               surface air pressure
+Hout(idTair) == F       ! Tair               surface air temperature
 Hout(idUair) == F       ! Uair               surface U-wind component
 Hout(idVair) == F       ! Vair               surface V-wind component
 Hout(idUairE) == F      ! Uwind_eastward     surface U-wind
@@ -724,11 +726,14 @@ Qout(idUvel) == T       ! u                  3D U-velocity
 Qout(idVvel) == T       ! v                  3D V-velocity
 Qout(idu3dE) == T       ! u_eastward         3D U-eastward  at RHO-points
 Qout(idv3dN) == T       ! v_northward        3D V-northward at RHO-points
+Qout(idWvel) == F       ! w                  3D W-velocity
+Qout(idOvel) == F       ! omega              omega vertical velocity
 Qout(idUbar) == T       ! ubar               2D U-velocity
 Qout(idVbar) == T       ! vbar               2D V-velocity
 Qout(idu2dE) == T       ! ubar_eastward      2D U-eastward  at RHO-points
 Qout(idv2dN) == T       ! vbar_northward     2D V-northward at RHO-points
 Qout(idFsur) == T       ! zeta               free-surface
+Qout(idBath) == F       ! bath               time-dependent bathymetry
 
 Qout(idTvar) == T T                        ! temperature and salinity
 
@@ -788,6 +793,7 @@ Qout(idWorb) == F       ! Ub_swan            wave bottom orbital velocity
 Qout(idWdis) == F       ! Wave_dissip        wave dissipation
 
 Qout(idPair) == F       ! Pair               surface air pressure
+Qout(idTair) == F       ! Tair               surface air temperature
 Qout(idUair) == F       ! Uair               surface U-wind component
 Qout(idVair) == F       ! Vair               surface V-wind component
 Qout(idUairE) == F                          ! surface U-wind
@@ -860,6 +866,7 @@ Aout2(idLhea) == F       ! latent             latent heat flux
 Aout2(idShea) == F       ! sensible           sensible heat flux
 Aout2(idLrad) == F       ! lwrad              longwave radiation flux
 Aout2(idSrad) == F       ! swrad              shortwave radiation flux
+Aout2(idEmPf) == F       ! EminusP            E-P flux
 Aout2(idevap) == F       ! evaporation        evaporation rate
 Aout2(idrain) == F       ! rain               precipitation rate
 
@@ -922,6 +929,7 @@ Aout(idU3Sd) == F       ! u_stokes           3D U-Stokes velocity
 Aout(idV3Sd) == F       ! v_stokes           3D V-Stokes velocity
 
 Aout(idPair) == F       ! Pair               surface air pressure
+Aout(idTair) == F       ! Tair               surface air temperature
 Aout(idUair) == F       ! Uair               surface U-wind component
 Aout(idVair) == F       ! Vair               surface V-wind component
 Aout(idUairE) == F      ! Uwind_eastward     surface U-wind
@@ -1120,7 +1128,7 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
 ! continuation (\) or a vertical bar (|) symbol after each entry, except
 ! the last one.
 
-    NFFILES == 10                          ! number of forcing files
+    NFFILES == 14                          ! number of forcing files
 
     FRCNAME == /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Pair_1980.nc   |
                /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Pair_1981.nc   |
@@ -1149,7 +1157,11 @@ Dout(iTvdif) == T T     ! temp_vdiff, ...    vertical diffusion
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Vwind_1980.nc   |
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Vwind_1981.nc   |
               /center1/AKWATERS/kate/JRA55-do/JRA55DO_1.4_Vwind_1982.nc   \
-              /center1/AKWATERS/kshedstrom/CORE2/sss_fill_2004.nc
+              /center1/AKWATERS/kshedstrom/CORE2/sss_fill_2004.nc         \
+              /center1/AKWATERS/kshedstrom/Arctic/Files/iron_sediment_ARCTIC4.nc \
+              /center1/AKWATERS/kshedstrom/Chukchi/Files/Mineral_Fe_Flux_PI_ROMS.nc \
+              /center1/AKWATERS/kshedstrom/Chukchi/Files/Soluble_Fe_Flux_PI_ROMS.nc \
+              /center1/AKWATERS/kshedstrom/Arctic/Files/atm_CO2_Arctic.nc
 
 !              /center1/AKWATERS/kshedstrom/Arctic/Files/runoff_ARCTIC4_daitren_southern_clim.nc \
 ! Output NetCDF file names, [1:Ngrids].
